文章を修正。
Signed-off-by: YU-TANG <0011solo@gmail.com>

--- a/readmeJ.html
+++ b/readmeJ.html
@@ -75,7 +75,7 @@
    <div style="margin-left:3em;text-indent:-1em;"><p>※ 訳註: Vanilla には<a href="http://vanillaforums.com/plans">商用のホスティング サービス</a>が存在するため、Vanilla の利用者拡大は間接的に Vanilla の開発を財政支援することになります。</p></div>
    
    <h1>著作権</h1>
-   <p>Vanilla は <abbr title="GNU Public License">GPL</abbr> ライセンスの下でリリースされています (詳しくは <a href="LICENSE.txt">LICENSE.txt</a> を参照してください)。</p>
+   <p>Vanilla は <abbr title="GNU Public License">GPL</abbr> の下でリリースされています (詳しくは <a href="LICENSE.txt">LICENSE.txt</a> を参照してください)。</p>
 </div>
 </body>
 </html>
