アップグレード手順に注釈を追加
Signed-off-by: YU-TANG <0011solo@gmail.com>

--- a/readmeJ.html
+++ b/readmeJ.html
@@ -40,7 +40,8 @@
    
    <h1>Vanilla 1 から Vanilla 2 へのアップグレード手順</h1>
    <p>Vanilla 1 フォーラムをカスタマイズしている場合 (プラグインやテーマ、翻訳)、そのうちのいくつかは Vanilla 2 へそのまま移行することができないかもしれません。おそらく、あなたのフォーラム向けに新しいテーマを作成する必要があるでしょう。</p>
-   <p><strong><span style="color: #d00;">重要:</span> あなたのデータベースと既存のファイルすべてを必ずバックアップしてください。</strong></p>
+   <p><strong><span style="color: #d00;">重要:</span> あなたのデータベースと既存のファイルすべてを必ず<a href="http://vanillaforums.org/docs/backingup">バックアップ</a>してください。</strong></p>
+   <div style="margin-left:3em;text-indent:-1em;"><p>※ 訳註: 以下の手順は古い可能性があります。最新のアップグレード手順については、<a href="http://vanillaforums.org/docs/installation-upgrade">Upgrade your Vanilla Forum</a> の参照を強く推奨します。</p></div>
    <ol>
       <li>Vanilla 1 のファイルをすべて削除します。</li>
       <li>このパッケージの全ファイルをウェブ サーバにアップロードします。</li>
