--- a/readmeJ.html
+++ b/readmeJ.html
@@ -14,7 +14,7 @@
 </div>
 <div class="Info">
    <h1>ようこそ！</h1>
-   <p>Vanilla は、カスタマイズが容易で、他のアプリケーションに簡単に統合できて、使って楽しいコミュニティソリューションを目指して開発されています。Vanilla はすでに世界中の 40万以上のコミュニティフォーラムで利用されています。あなたが Vanilla を使うと決めたのでしたら、わたしたちにとってこんなに幸せなことはありません。</p>
+   <p>Vanilla は、カスタマイズが容易で、他のアプリケーションに簡単に統合できて、使って楽しいコミュニティソリューションを目指して開発されています。Vanilla はすでに世界中の 40万以上のコミュニティフォーラムで利用されています。あなたが Vanilla を使うと決めたのでしたら、私たちにとってこんなに幸せなことはありません。</p>
    <p style="text-align: right;">- Mark O'Sullivan</p>
 
    <h1>動作要件</h1>   
@@ -34,14 +34,14 @@
    <p>インストール中に何か問題が発生した場合は、転送したファイルのパーミッションに関係している可能性が強いです。PHP が以下のファイルとフォルダに書き込みできるように権限を付与してください:</p>
    <ul>
       <li>/cache/*</li>
-      <li>/conf/config.php (このファイルが存在しなくても、心配しないでください)</li>
+      <li>/conf/config.php (このファイルが存在しなくても、心配しないでください。インストール時に生成されます。)</li>
       <li>/uploads/*</li>
    </ul>
    <p>FTPクライアントによっては、転送処理が不安定なためにファイルが破損することがあります。途中で転送が中断した場合は、ディレクトリごとに小分けに転送を行なってください。</p>
    
    <h1>Vanilla 1 から Vanilla 2 へのアップグレード手順</h1>
-   <p>Vanilla 1 フォーラムをカスタマイズしている場合 (プラグインやテーマ、翻訳)、そのうちのいくつかは Vanilla 2 へそのまま移行することができないかもしれません。おそらく、あなたのフォーラム向けに新しいテーマを作成する必要があるでしょう。</p>
-   <p><strong><span style="color: #d00;">重要:</span> あなたのデータベースと既存のファイルすべてを必ず<a href="http://vanillaforums.org/docs/backingup">バックアップ</a>してください。</strong></p>
+   <p>Vanilla 1 フォーラムをカスタマイズしている場合 (プラグインやテーマ、翻訳)、そのうちのいくつかは Vanilla 2 へそのまま移行することができないかもしれません。おそらく、新しいテーマを作成する必要があるでしょう。</p>
+   <p><strong><span style="color: #d00;">重要:</span> データベースと既存のファイルすべてを必ず<a href="http://vanillaforums.org/docs/backingup">バックアップ</a>してください。</strong></p>
    <div style="margin-left:3em;text-indent:-1em;"><p>※ 訳註: 以下の手順は古い可能性があります。最新のアップグレード手順については、<a href="http://vanillaforums.org/docs/installation-upgrade">Upgrade your Vanilla Forum</a> の参照を強く推奨します。</p></div>
    <ol>
       <li>Vanilla 1 のファイルをすべて削除します。</li>
@@ -73,7 +73,7 @@
    </ul>
    
    <h1>見返り</h1>
-   <p>Vanilla があなたのコミュニティの成長をあらゆる側面から後押しすることを一度体験すると、あなたはそのことにわたしたちと同じくらい感動を覚えるでしょう。あなたがこのソフトウェアを無償で使用することと引き換えに、わたしたちがあなたに期待することは、その体験を他の人に話すこと、それだけです。あなたが多くの人々に話せば話すほど、多くの人々が Vanilla を使うようになります。そして、わたしたちは Vanilla をさらに改良するために、より多くの時間を費やすことができるようになります。</p>
+   <p>Vanilla の導入によるコミュニティの成長を一度体験すると、開発に携わる私たちと同じくらいの感動を覚えるでしょう。このソフトウェアを無償で使用することと引き換えに、私たちがあなたに期待することは、その体験を他の人に話すこと、それだけです。あなたが多くの人々に話せば話すほど、多くの人々が Vanilla を使うようになります。そして私たちは、 Vanilla をさらに改良するためにより多くの時間を費やすことができるようになります。</p>
    <div style="margin-left:3em;text-indent:-1em;"><p>※ 訳註: Vanilla には<a href="http://vanillaforums.com/plans">商用のホスティングサービス</a>が存在するため、Vanilla の利用者数拡大と知名度アップは間接的に Vanilla の開発を財政支援することになります。</p></div>
    
    <h1>著作権</h1>
